<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#00a62e">

        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plant"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            tools:text="Tambah Tumbuhan"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_name"
            android:textColor="#000"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            app:layout_constraintTop_toBottomOf="@id/judul"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input1"
            android:layout_width="306dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <android.support.design.widget.TextInputEditText
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/black"
                android:singleLine="false"
                android:textColor="@android:color/background_light"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_type"
            android:textColor="#000"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input2"
            android:layout_width="293dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1">

            <android.support.design.widget.TextInputEditText
                android:layout_width="330dp"
                android:layout_height="39dp"
                android:shadowColor="@android:color/black"
                android:textColor="@android:color/background_light"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            tools:layout_editor_absoleteX="148dp"
            tools:layout_editor_absoluteY="261dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>



</LinearLayout>
