<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allfeature.AllFeature"
    android:background="#87D37C">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="20sp"
            android:paddingRight="20sp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:textColorHint="#ffffff"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fullname"
                    android:inputType="textCapWords"
                    android:textColor="#ffffff"
                    android:textColorHighlight="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textColorLink="#ffffff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                app:layout_constraintTop_toBottomOf="@+id/fullname"
                tools:layout_editor_absoluteX="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="#ffffff"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="#ffffff"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="-31dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:layout_editor_absoluteX="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="#ffffff"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="#ffffff"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="-31dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:layout_editor_absoluteX="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="#ffffff"
                    android:textColorHighlight="#ffffff"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="#ffffff"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="-31dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:text="Sign Up"
                android:layout_weight="1"
                android:padding="10sp"
                android:layout_marginTop="10sp"
                android:background="#ffffff"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/forget"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
